@startuml

title __PRODUCTS's Class Diagram__\n

  package  {
    package edu.uark {
      package edu.uark.commands {
        package edu.uark.commands.products {
          class ProductByLookupCodeQuery {
              - lookupCode : String
              + execute()
              + getLookupCode()
              + setLookupCode()
              + getProductRepository()
              + setProductRepository()
              + ProductByLookupCodeQuery()
          }
        }
      }
    }
  }
  

  package  {
    package edu.uark {
      package edu.uark.commands {
        package edu.uark.commands.products {
          class ProductQuery {
              - productId : UUID
              + execute()
              + getProductId()
              + setProductId()
              + getProductRepository()
              + setProductRepository()
              + ProductQuery()
          }
        }
      }
    }
  }
  

  package  {
    package edu.uark {
      package edu.uark.commands {
        package edu.uark.commands.products {
          class ProductSaveCommand {
              + execute()
              + getApiProduct()
              + setApiProduct()
              + getProductRepository()
              + setProductRepository()
              + ProductSaveCommand()
          }
        }
      }
    }
  }
  

  package  {
    package edu.uark {
      package edu.uark.commands {
        package edu.uark.commands.products {
          class ProductsQuery {
              + execute()
              + getProductRepository()
              + setProductRepository()
              + ProductsQuery()
          }
        }
      }
    }
  }
  

  ProductByLookupCodeQuery -up-|> ResultCommandInterface
  ProductByLookupCodeQuery o-- ProductRepositoryInterface : productRepository
  ProductQuery -up-|> ResultCommandInterface
  ProductQuery o-- ProductRepositoryInterface : productRepository
  ProductSaveCommand -up-|> ResultCommandInterface
  ProductSaveCommand o-- Product : apiProduct
  ProductSaveCommand o-- ProductRepositoryInterface : productRepository
  ProductsQuery -up-|> ResultCommandInterface
  ProductsQuery o-- ProductRepositoryInterface : productRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
